--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,3 +15,10 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL95Dialect
+
+sinder:
+  secrets:
+    access-key: ${SINDER_SECRETS_ACCESS-KEY}
+    refresh-key: ${SINDER_SECRETS_REFRESH-KEY}
+    enable-key: ${SINDER_SECRETS_ENABLE-KEY}
+    password-refresh-key: ${SINDER_SECRETS_REFRESH-PASSWORD-KEY}
