MailSender is refactored, classes for properties are created

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,8 @@ spring:
     url: ${SPRING_DATASOURCE_URL}
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
-
+    hikari:
+      schema: sinder
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     generate-ddl: true
@@ -14,11 +15,19 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        default_schema: sinder
 
 sinder:
-  secrets:
+  security:
     access-key: ${SINDER_SECRETS_ACCESS-KEY}
     refresh-key: ${SINDER_SECRETS_REFRESH-KEY}
     enable-key: ${SINDER_SECRETS_ENABLE-KEY}
-    password-refresh-key: ${SINDER_SECRETS_PASSWORD-REFRESH-KEY}
+    password-refresh-key: ${SINDER_SECRETS_REFRESH-PASSWORD-KEY}
+    access-expiration-time: 3600
+    refresh-expiration-time: 604800
+  mail:
+    host: ${SINDER_MAIL_HOST}
+    username: ${SINDER_MAIL_USERNAME}
+    password: ${SINDER_MAIL_PASSWORD}
+    port: ${SINDER_MAIL_PORT}
+    protocol: ${SINDER_MAIL_PROTOCOL}
