--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,17 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.imgscalr</groupId>
-            <artifactId>imgscalr-lib</artifactId>
-            <version>4.2</version>
-        </dependency>
-        <dependency>
             <groupId>com.jlefebure</groupId>
             <artifactId>spring-boot-starter-minio</artifactId>
             <version>1.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.19</version>
+        </dependency>
+
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
