StorageService is updated

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ spring:
     access-key: ${MINIO_ROOT_USER}
     secret-key: ${MINIO_ROOT_PASSWORD}
     url: ${SPRING_MINIO_URL}
+  jackson:
+    default-property-inclusion: NON_NULL
 
 sinder:
   security:
