--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,10 @@ spring:
     url: ${SPRING_MINIO_URL}
   jackson:
     default-property-inclusion: NON_NULL
+  servlet:
+    multipart:
+      max-file-size: 15MB
+      max-request-size: 15MB
 
 sinder:
   security:
