Added minio to nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - 5433:5432
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    container_name: db
+    container_name: sinder-db
 
   sinder:
     env_file: .env
@@ -32,9 +32,7 @@ services:
   minio:
     env_file: .env
     image: minio/minio
-    ports:
-      - 9000:9000
-      - 9001:9001
+    container_name: minio
     command: server --console-address ":9001" /data/
     volumes:
       - minio-data:/data
