--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,9 +1,15 @@
 server {
     listen 80;
-    listen [::]:80;
     server_name localhost;
 
-    location / {
-        proxy_pass http://sinder:8080/;
-    }
+
+
+     location / {
+              proxy_pass http://minio:9001;
+     }
+
+     location /main-api/v1 {
+            proxy_pass http://sinder:8080;
+     }
+
 }
