--- a/conf/default.conf
+++ b/conf/default.conf
@@ -8,7 +8,7 @@ server {
               proxy_pass http://minio:9001;
      }
 
-     location /main-api/v1 {
+     location /sinder/v1 {
             proxy_pass http://sinder:8080;
      }
 
